@@ -409,6 +409,9 @@ class Config(object):
         object. This also includes finding any
         :class:`morepath.config.Configurable` objects.
 
+        If given a package, it scans any modules and sub-packages as
+        well recursively.
+
         :param package: The Python module or package to scan. Optional; if left
           empty case the calling package is scanned.
         :ignore: A Venusian_ style ignore to ignore some modules during
@@ -418,6 +421,23 @@ class Config(object):
             package = caller_package()
         scanner = venusian.Scanner(config=self)
         scanner.scan(package, ignore=ignore, onerror=ignore_import_error)
+
+    def scan_module(self, module, ignore=None):
+        """Scan module for configuration actions (decorators).
+
+        Register any found configuration actions with this
+        object. This also includes finding any
+        :class:`morepath.config.Configurable` objects.
+
+        If given a package just scans its ``__init__.py``, does not
+        scan any sub-modules or sub-packages.
+
+        :param module: The Python module or package to scan.
+        :ignore: A Venusian_ style ignore to ignore some modules during
+          scanning. Optional.
+        """
+        scanner = venusian.Scanner(config=self)
+        scanner.scan_module(module.__name__, module, ignore=ignore)
 
     def configurable(self, configurable):
         """Register a configurable with this config.
