@@ -1,0 +1,16 @@
+from .theapp import app
+
+
+class Model(object):
+    def __init__(self, id):
+        self.id = id
+
+
+@app.path(model=Model, path='{id}')
+def get_model(id):
+    return Model(id)
+
+
+@app.view(model=Model)
+def default(self, request):
+    return "The view for model: %s" % self.id
