@@ -1,0 +1,3 @@
+import morepath
+
+app = morepath.App()
